fixed date format on talks

--- a/_talks/2022-06-09-poster-1.md
+++ b/_talks/2022-06-09-poster-1.md
@@ -2,8 +2,8 @@
 title: "Augmenting the EnKF with a Shallow Convolutional Neural Network"
 collection: talks
 type: "Poster"
-permalink: /talks/6/9/22-poster-1
+permalink: /talks/2022-06-09-poster-1
 venue: "International Symposium on Data Assimilation"
-date: 6/9/22
+date: 2022-06-09
 location: "Fort Collins, CO"
 ---
