--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -57,10 +57,8 @@
      "output_type": "stream",
      "text": [
       "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
+      "Uncertainty Quantification and Calibration of a Large Subsurface Flow and Transport Model Using the Ensemble Kalman Filter\tConference Presentation\ttalk-1\tWaste Management Symposium\t2020-03-13\t\"Phoenix, AZ\"\r\n",
+      "Augmenting the EnKF with a Shallow Convolutional Neural Network\tPoster\tposter-1\tInternational Symposium on Data Assimilation\t2022-06-09\t\"Fort Collins, CO\""
      ]
     }
    ],
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -90,104 +88,10 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>type</th>\n",
-       "      <th>url_slug</th>\n",
-       "      <th>venue</th>\n",
-       "      <th>date</th>\n",
-       "      <th>location</th>\n",
-       "      <th>talk_url</th>\n",
-       "      <th>description</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Talk 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
-       "      <td>talk-1</td>\n",
-       "      <td>UC San Francisco, Department of Testing</td>\n",
-       "      <td>2012-03-01</td>\n",
-       "      <td>San Francisco, California</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Tutorial 1 on Relevant Topic in Your Field</td>\n",
-       "      <td>Tutorial</td>\n",
-       "      <td>tutorial-1</td>\n",
-       "      <td>UC-Berkeley Institute for Testing Science</td>\n",
-       "      <td>2013-03-01</td>\n",
-       "      <td>Berkeley CA, USA</td>\n",
-       "      <td>http://exampleurl.com</td>\n",
-       "      <td>This is a description of your tutorial, note t...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Talk 2 on Relevant Topic in Your Field</td>\n",
-       "      <td>Talk</td>\n",
-       "      <td>talk-2</td>\n",
-       "      <td>London School of Testing</td>\n",
-       "      <td>2014-02-01</td>\n",
-       "      <td>London, UK</td>\n",
-       "      <td>http://example2.com</td>\n",
-       "      <td>This is a description of your talk, which is a...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Conference Proceeding talk 3 on Relevant Topic...</td>\n",
-       "      <td>Conference proceedings talk</td>\n",
-       "      <td>talk-3</td>\n",
-       "      <td>Testing Institute of America 2014 Annual Confe...</td>\n",
-       "      <td>2014-03-01</td>\n",
-       "      <td>Los Angeles, CA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>This is a description of your conference proce...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               title  \\\n",
-       "0             Talk 1 on Relevant Topic in Your Field   \n",
-       "1         Tutorial 1 on Relevant Topic in Your Field   \n",
-       "2             Talk 2 on Relevant Topic in Your Field   \n",
-       "3  Conference Proceeding talk 3 on Relevant Topic...   \n",
-       "\n",
-       "                          type    url_slug  \\\n",
-       "0                         Talk      talk-1   \n",
-       "1                     Tutorial  tutorial-1   \n",
-       "2                         Talk      talk-2   \n",
-       "3  Conference proceedings talk      talk-3   \n",
-       "\n",
-       "                                               venue        date  \\\n",
-       "0            UC San Francisco, Department of Testing  2012-03-01   \n",
-       "1          UC-Berkeley Institute for Testing Science  2013-03-01   \n",
-       "2                           London School of Testing  2014-02-01   \n",
-       "3  Testing Institute of America 2014 Annual Confe...  2014-03-01   \n",
-       "\n",
-       "                    location               talk_url  \\\n",
-       "0  San Francisco, California                    NaN   \n",
-       "1           Berkeley CA, USA  http://exampleurl.com   \n",
-       "2                 London, UK    http://example2.com   \n",
-       "3            Los Angeles, CA                    NaN   \n",
-       "\n",
-       "                                         description  \n",
-       "0  This is a description of your talk, which is a...  \n",
-       "1  This is a description of your tutorial, note t...  \n",
-       "2  This is a description of your talk, which is a...  \n",
-       "3  This is a description of your conference proce...  "
-      ]
+      "text/plain": "                                               title                     type  \\\n0  Uncertainty Quantification and Calibration of ...  Conference Presentation   \n1  Augmenting the EnKF with a Shallow Convolution...                   Poster   \n\n   url_slug                                         venue        date  \\\n0    talk-1                    Waste Management Symposium  2020-03-13   \n1  poster-1  International Symposium on Data Assimilation  2022-06-09   \n\n           location  talk_url  \\\n0       Phoenix, AZ       NaN   \n1  Fort Collins, CO       NaN   \n\n                                         description  \n0                                                NaN  \n1  High-resolution datasets are often too computa...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>title</th>\n      <th>type</th>\n      <th>url_slug</th>\n      <th>venue</th>\n      <th>date</th>\n      <th>location</th>\n      <th>talk_url</th>\n      <th>description</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Uncertainty Quantification and Calibration of ...</td>\n      <td>Conference Presentation</td>\n      <td>talk-1</td>\n      <td>Waste Management Symposium</td>\n      <td>2020-03-13</td>\n      <td>Phoenix, AZ</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Augmenting the EnKF with a Shallow Convolution...</td>\n      <td>Poster</td>\n      <td>poster-1</td>\n      <td>International Symposium on Data Assimilation</td>\n      <td>2022-06-09</td>\n      <td>Fort Collins, CO</td>\n      <td>NaN</td>\n      <td>High-resolution datasets are often too computa...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -240,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -302,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,8 +217,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\r\n",
-      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\r\n"
+      "2020-03-13-talk-1.md   2022-06-09-poster-1.md\r\n"
      ]
     }
    ],
@@ -324,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -335,25 +238,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\r\n",
-      "collection: talks\r\n",
-      "type: \"Tutorial\"\r\n",
-      "permalink: /talks/2013-03-01-tutorial-1\r\n",
-      "venue: \"UC-Berkeley Institute for Testing Science\"\r\n",
-      "date: 2013-03-01\r\n",
-      "location: \"Berkeley CA, USA\"\r\n",
-      "---\r\n",
-      "\r\n",
-      "[More information here](http://exampleurl.com)\r\n",
-      "\r\n",
-      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n"
+      "cat: ../_talks/2013-03-01-tutorial-1.md: No such file or directory\r\n"
      ]
     }
    ],
    "source": [
     "!cat ../_talks/2013-03-01-tutorial-1.md"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
