--- a/_talks/2020-03-13-talk-1.md
+++ b/_talks/2020-03-13-talk-1.md
@@ -1,7 +1,7 @@
 ---
 title: "Uncertainty Quantification and Calibration of a Large Subsurface Flow and Transport Model Using the Ensemble Kalman Filter"
 collection: talks
-type: "Conference Presentation"
+type: "Presentation"
 permalink: /talks/2020-03-13-talk-1
 venue: "Waste Management Symposium"
 date: 2020-03-13
